[gd_scene load_steps=15 format=3 uid="uid://bcp8o0tqc5d8n"]

[ext_resource type="Script" uid="uid://bgmxb11braos2" path="res://addons/player_controller/scripts/player_controller.gd" id="1_n4k2v"]
[ext_resource type="Script" uid="uid://k2e5djr533am" path="res://addons/player_controller/scripts/components/input_handler.gd" id="2_8jx5t"]
[ext_resource type="Script" uid="uid://bs4llwmdwf13f" path="res://addons/player_controller/scripts/components/movement_controller.gd" id="3_hm4qx"]
[ext_resource type="Script" uid="uid://doox6aew0kn2q" path="res://addons/player_controller/scripts/components/camera_controller.gd" id="4_dc2p8"]
[ext_resource type="Script" uid="uid://dcpqpsgbr55dv" path="res://addons/player_controller/scripts/components/animation_controller.gd" id="5_2m1br"]
[ext_resource type="Script" uid="uid://cggyxjctbwma0" path="res://addons/player_controller/scripts/components/first_person_mode.gd" id="5_dmdai"]
[ext_resource type="Script" uid="uid://bk7o3wutqk5wi" path="res://addons/player_controller/scripts/components/third_person_mode.gd" id="6_dkrda"]
[ext_resource type="Script" uid="uid://bcdaa4lpj3kvk" path="res://addons/player_controller/scripts/components/state_manager.gd" id="6_t7c5k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
height = 1.8

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dmdai"]
albedo_color = Color(0.349675, 0.465197, 0.164069, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dkrda"]
material = SubResource("StandardMaterial3D_dmdai")

[sub_resource type="Resource" id="Resource_r3lk6"]
script = ExtResource("5_dmdai")
eye_height = 1.6
fov = 90.0
head_bob_enabled = true
head_bob_amplitude = 0.05
head_bob_frequency = 2.0
metadata/_custom_type_script = "uid://cggyxjctbwma0"

[sub_resource type="Resource" id="Resource_um20e"]
script = ExtResource("6_dkrda")
camera_distance = 5.0
camera_height = 1.0
camera_side_offset = 0.5
fov = 75.0
collision_mask = 1
smooth_position = true
position_smoothing = 10.0
metadata/_custom_type_script = "uid://bk7o3wutqk5wi"

[node name="PlayerController" type="CharacterBody3D" node_paths=PackedStringArray("camera_pivot", "camera", "skin", "collision_shape")]
script = ExtResource("1_n4k2v")
camera_pivot = NodePath("CameraPivot")
camera = NodePath("CameraPivot/SpringArm3D/Camera3D")
skin = NodePath("Character")
collision_shape = NodePath("CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_1")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.940026, 0.341102, 0, -0.341102, 0.940026, 0, 1.5, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
spring_length = 5.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]

[node name="Character" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00247186, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Character"]
transform = Transform3D(0.63, 0, 0, 0, 0.189195, 0, 0, 0, 0.229968, 0.0187485, 0.343702, 0.407741)
mesh = SubResource("BoxMesh_dkrda")

[node name="Components" type="Node" parent="."]

[node name="InputHandler" type="Node" parent="Components"]
script = ExtResource("2_8jx5t")

[node name="MovementController" type="Node" parent="Components"]
script = ExtResource("3_hm4qx")

[node name="CameraController" type="Node" parent="Components"]
script = ExtResource("4_dc2p8")
first_person_mode = SubResource("Resource_r3lk6")
third_person_mode = SubResource("Resource_um20e")

[node name="AnimationController" type="Node" parent="Components"]
script = ExtResource("5_2m1br")

[node name="StateManager" type="Node" parent="Components"]
script = ExtResource("6_t7c5k")
